# nguontin.com

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.specify/: feature.json
.specify/integrations/: copilot.manifest.json  hermes.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: Dockerfile  pyproject.toml
backend/.specify/: init-options.json  integration.json
backend/.specify/integrations/: hermes.manifest.json  speckit.manifest.json
backend/.specify/workflows/: workflow-registry.json
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  deps.py  health.py  profiles.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  enums.py
backend/app/schemas/: __init__.py  auth.py  profiles.py
backend/app/services/: __init__.py  email_delivery.py  email_login.py  profiles.py  users.py
backend/tests/: test_auth_api.py  test_profiles_api.py  test_security.py
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.js  vitest.config.mjs
frontend/app/: auth-pages.test.tsx  globals.css  layout.tsx  legal-pages.test.tsx  page.test.tsx  page.tsx  sso-page.test.tsx
frontend/e2e/: home.spec.js
n8n/: nguontin-email-login-workflow.json
specs/001-nguontin-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tickets/: nguontin-mvp-domain-model.md  nguontin-mvp-implementation-plan.md  nguontin-mvp-spec.md  nguontin-mvp-tasks.md
(+16 files in other folders)
