[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nguontin-backend"
version = "0.1.0"
description = "NguonTin MVP backend"
requires-python = ">=3.12"
dependencies = [
  "argon2-cffi>=25.1,<26.0",
  "email-validator>=2.3,<3.0",
  "fastapi>=0.116,<1.0",
  "python-dotenv>=1.1,<2.0",
  "PyJWT>=2.10,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
